# GameEngine

./: CMakeLists.txt  README.md
assets/: tile.texture
pre_assets/: rect.frag  rect.vert  text.frag
pre_assets/shaders/: rect.frag  rect.vert  sprite.frag  sprite.vert  sprite_with_camera.vert  text.vert  ui_color.frag  ui_color.vert
src/: CMakeLists.txt
src/Engine/Core/: .Text.h.swp  Animation.cpp  Camera.cpp  Downloader.cpp  Global.cpp  ILevel.cpp  IShader.cpp  Main.cpp  Object.cpp  ScreenManager.cpp  ShaderManager.cpp  SoundLinux.cpp  Sprite.cpp  Text.cpp  Timer.cpp  UI.cpp  VertexData.cpp
src/Engine/UI/: Rect.cpp
src/Engine/Utils/: File.cpp
src/Game/Core/: GameConfig.cpp
src/Game/Levels/: GameLevel.cpp
src/Game/Shaders/: Shader2DSprite.cpp  Shader2DSpriteWithCamera.cpp  ShaderRect.cpp
src/Game/Sprites/: Tile.cpp
src/Include/: asgl.h  assdl.h
src/Include/Engine/Core/: .Object.h.swp  Animation.h  Camera.h  Downloader.h  Global.h  GlobalConfig.h  ILevel.h  IShader.h  InfoSprite.h  Object.h  ScreenManager.h  ShaderManager.h  Sound.h  SoundLinux.h  Sprite.h  Text.h  Timer.h  UI.h  VertexData.h
src/Include/Engine/UI/: Rect.h
src/Include/Engine/Utils/: .File.h.swp  File.h
src/Include/Game/Core/: Defines.h  Forwards.h  GameConfig.h  LevelsEnum.h  ResEnum.h  ShaderList.h  SpritesEnum.h
src/Include/Game/Levels/: GameLevel.h
src/Include/Game/Shaders/: Shader2DSprite.h  Shader2DSpriteWithCamera.h  ShaderRect.h  Shaders.h
src/Include/Game/Sprites/: Tile.h
src/Include/glad/: glad.h
src/glad/: glad.c
utils/build_data_file/: main.c  makefile
utils/objtores/: makefile
utils/packer/: makefile  packer.c  packer.h
utils/pbr_to_res/: makefile
utils/pngtores/: main.cpp  makefile
utils/pngtores1/: main.cpp  makefile  ptores1
utils/tilesettores/: main.cpp  makefile
